[metadata]
name = wolfd
summary = wolfd is a jabber client that runs as a daemon.
description-file =
    README.md
author = Emma Barber
author-email = me@taron.io
home-page = http://taron.io/
classifier =
    Topic :: Communications
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
keywords = jabber xmpp

[files]
packages =
    wolfd

[entry_points]
console_scripts =
    wolfd = wolfd.daemon:main
